--- a/webscraping/templates/webscraping/webscrape.html
+++ b/webscraping/templates/webscraping/webscrape.html
@@ -1,5 +1,5 @@
 
-{% extends "_base.html" %}
+{% extends "webscraping/_base_webscrape.html" %}
 {% load static %}
 {% load i18n %}
 {% load define_action %}
