--- a/app/templates/unicorn/chat/chat_row.html
+++ b/app/templates/unicorn/chat/chat_row.html
@@ -1,25 +1,13 @@
 <div>
     {% load unicorn %}
 
-    <div class="message user-message" data-id="{{chat.id}}">
-
-        <strong>You</strong>:
-
-        <span class="text">{{ chat.prompt }}</span>
-
-        <small class="date muted-medium">
-            <span class="fa fa-calendar"></span>
-            {{ chat.created_on|date:"D d M Y - H:i" }}
-        </small>
-
-    </div>
     <div class="message bot-message" data-id="{{chat.id}}">
 
-        <strong>Ollama</strong>:
+        <h3 class="b-bottom-muted-max">Ollama:</h3>
 
         {% if chat.response %}
 
-            <span class="text">{{ chat.response }}</span>
+            <span class="text">{{ chat.response|safe }}</span>
 
             <br>
 
@@ -35,5 +23,19 @@
         {% endif %}
 
     </div>
+
+    <div class="message user-message" data-id="{{chat.id}}">
+
+        <h3 class="b-bottom-muted-max">You:</h3>
+
+        <span class="text">{{ chat.prompt|safe }}</span>
+
+        <small class="date muted-medium">
+            <span class="fa fa-calendar"></span>
+            {{ chat.created_on|date:"D d M Y - H:i" }}
+        </small>
+
+    </div>
+
     <div class="clear">&nbsp;</div>
 </div>
