Layout OK  | Layout updated: OK | Auth implemented... | UIP with django-unicorn implemented... | Commiting to merge w main, and upload... | v1 completed, UI/UIP 100% functional, uploading... | Uploaded, merged with main → New (temp) branch using sqlite instead of postgres, for Pyany... Deploying... | Commented <db.sqlite3> in .gitignore to allow for branch <62610716-journal-ai-guidance-sqlite-X> | Comitting before branching for db logging implementation... | Db logging implementation: OK → Deploying: Heroku &| Pyany... | Added tailwind pre-push: build, then <.../styles.css> copy to <static/...> (from <staticfiles/...>... | + Workaround...

--- a/django_app/templates/_base.html
+++ b/django_app/templates/_base.html
@@ -12,8 +12,16 @@
 
         <!-- Tailwind -->
         {% tailwind_preload_css %}
-        {% tailwind_css %}
+        <!-- 
+            Workaround
+            ----------
+            https://stackoverflow.com/questions/44657829/css-file-blocked-mime-type-mismatch-x-content-type-options-nosniff
+            { % tailwind_css % } 
+        -->
+        <link href="{% static 'css/dist/styles.css' %}">
 
+
+        <!-- Main -->
         <link rel="stylesheet" href="{% static 'templates/main/css/main.css' %}">
 
 
