--- a/webscraping/templates/unicorn/webscrape/row.html
+++ b/webscraping/templates/unicorn/webscrape/row.html
@@ -1,5 +1,4 @@
-
-
+<div>
     <!-- webscrapes/row.html -->
     {% load define_action %}
 
@@ -81,6 +80,8 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
                     <span class="fas fa-gear text-yellow-600"></span>
                 {% elif  webscrape.task_status == "STARTED" %}
                     <span class="fas fa-arrow text-blue-600"></span>
+                {% elif  webscrape.task_status == "QUEUED" %}
+                    <span class="fas fa-hourglass text-blue-600"></span>
                 {% elif  webscrape.task_status == "FAILED" %}
                     <span class="fas fa-x text-red-600"></span>
                 {% endif %}               
@@ -232,4 +233,17 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
                 {{ webscrape.created_on|date:"D d M Y - H:i" }}
             </font>
         </td>
+        <td class="border-green-400">
+            <font
+                class="border-green-700 shadow-sm text-green-900 tracking-wider text-sm float-right">
+                <span class="fas fa-calendar text-green-900"></span>
+                {{ webscrape.last_modified|date:"D d M Y - H:i" }}
+            </font>
+        </td>
+        <td id="retry-{{webscrape.id}}"
+            class="first:rounded-l-lg last:rounded-r-lg p-2
+                   text-green-900 tracking-widest border-green-100">
+            <i class="fa fa-repeat repeat" unicorn:click="retry"></i>
+        </td>
     </tr>
+</div>
