--- a/webscraping/templates/unicorn/webscraping/row.html
+++ b/webscraping/templates/unicorn/webscraping/row.html
@@ -37,7 +37,7 @@
                 </font>
             {% endif %}
         </td>
-        <td>
+<!--         <td>
             {% if is_editing %}
                 <input type="text" unicorn:model.defer="webscrape.title" value="{{ webscrape.title }}"
                     class="form-control rounded border-green-700 shadow-sm text-green-900
@@ -50,45 +50,45 @@
                 </font>
             {% endif %}
         </td>
-        <td>
+ -->        <td>
             {% if is_editing %}
-                <input type="text" unicorn:model.defer="webscrape.first_name" value="{{ webscrape.first_name }}" placeholder="ex: David"
+                <input type="text" unicorn:model.defer="webscrape.firstName" value="{{ webscrape.firstName }}" placeholder="ex: David"
 					class="form-control rounded border-green-700 shadow-sm text-green-900
 						   tracking-wider text-xs"/>
             {% else %}
                 <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
-                    {{ webscrape.first_name }}
+                    {{ webscrape.firstName }}
                 </font>
             {% endif %}
         </td>
         <td>
             {% if is_editing %}
-                <input type="text" unicorn:model.defer="webscrape.last_name"
-                    value="{{ last_name }}" placeholder="ex: Jonathan"
+                <input type="text" unicorn:model.defer="webscrape.lastName"
+                    value="{{ webscrape.lastName }}" placeholder="ex: Jonathan"
                     class="form-control rounded border-green-700 shadow-sm text-green-900
                            tracking-wider text-xs"/>
             {% else %}
                 <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
-                    {{ webscrape.last_name }}
+                    {{ webscrape.lastName }}
                 </font>
             {% endif %}
         </td>
-        <td>
+<!--         <td>
             {% if is_editing %}
-                <input type="text" unicorn:model.defer="webscrape.middle_name"
-                    value="{{ webscrape.middle_name }}" placeholder="ex: Henry"
+                <input type="text" unicorn:model.defer="webscrape.middleName"
+                    value="{{ webscrape.middleName }}" placeholder="ex: Henry"
                     class="form-control rounded border-green-700 shadow-sm text-green-900
                            tracking-wider text-xs"/>
             {% else %}
                 <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
-                    {{ webscrape.middle_name }}
+                    {{ webscrape.middleName }}
                 </font>
             {% endif %}
         </td>
-        <td>
+ -->        <td>
             {% if is_editing %}
                 <input type="text" unicorn:model.defer="webscrape.age"
                     value="{{ webscrape.age }}" placeholder="ex: 43"
